--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-flip-move",
+  "name": "@technative/preact-flip-move",
   "version": "3.0.3",
   "description": "Effortless animation between DOM changes (eg. list reordering) using the FLIP technique.",
   "main": "dist/react-flip-move.cjs.js",
